2014-12-18  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r177522. rdar://problem/19288547

    2014-12-18  Timothy Horton  <timothy_horton@apple.com>

            Change page preview loading order, and add a TextIndicator
            https://bugs.webkit.org/show_bug.cgi?id=139793
            <rdar://problem/19288547>

            Reviewed by Beth Dakin.

            * Shared/mac/ActionMenuHitTestResult.h:
            * Shared/mac/ActionMenuHitTestResult.mm:
            (WebKit::ActionMenuHitTestResult::encode):
            (WebKit::ActionMenuHitTestResult::decode):
            * WebProcess/WebPage/mac/WebPageMac.mm:
            (WebKit::WebPage::performActionMenuHitTestAtLocation):
            Build a TextIndicator for links.

            * UIProcess/API/Cocoa/WKViewPrivate.h:
            * UIProcess/API/mac/WKView.mm:
            (-[WKView _dismissContentRelativeChildWindows]):
            (-[WKView _setPreviewTitle:]):
            (-[WKView _setPreviewLoading:]):
            Remove unneeded WK_API_ENABLED #ifs.

            (-[WKView _setPreviewOverrideImage:]):
            Add; forward to WKImmediateActionController.

            * UIProcess/mac/WKImmediateActionController.h:
            * UIProcess/mac/WKImmediateActionController.mm:
            (-[WKImmediateActionController willDestroyView:]):
            Shut down the WKPreviewPopoverAnimationController.

            (-[WKImmediateActionController _clearImmediateActionState]):
            (-[WKImmediateActionController immediateActionRecognizerWillPrepare:]):
            Don't build an immediate action item here; we'll always build it in
            willBeginAnimation, and the one we build here is likely to be wrong.

            (-[WKImmediateActionController _defaultAnimationController]):
            (-[WKImmediateActionController hidePreview]):
            (-[WKImmediateActionController setPreviewTitle:]):
            (-[WKImmediateActionController setPreviewLoading:]):